# batchling

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CITATION.cff  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
advanced-features/: index.html
assets/javascripts/: bash-command-highlight.js
docs/: advanced-features.md  architecture.md  batchify.md  cache.md  cli.md  configuration.md  deferred-mode.md  dry-run.md  frameworks.md  getting-started.md  how-it-works.md  index.md  installation.md  overview.md  providers.md  python-sdk.md  quickstart.md  troubleshooting.md  usage-patterns.md  use-cases.md
docs-site/: 404.html  index.html  sitemap.xml
docs-site/advanced-features/: index.html
docs-site/batchify/: index.html
docs-site/cache/: index.html
docs-site/cli/: index.html
docs-site/configuration/: index.html
docs-site/deferred-mode/: index.html
docs-site/dry-run/: index.html
docs-site/frameworks/: index.html
docs-site/getting-started/: index.html
docs-site/how-it-works/: index.html
docs-site/installation/: index.html
docs-site/overview/: index.html
docs-site/providers/: index.html
docs-site/python-sdk/: index.html
docs-site/quickstart/: index.html
docs-site/search/: search_index.json
docs-site/troubleshooting/: index.html
docs-site/usage-patterns/: index.html
docs-site/use-cases/: index.html
docs/architecture/: api.md  autobatcher.md  cache.md  context.md  context_display.md  core.md  exceptions.md  hooks.md  lifecycle_events.md  logging.md  overview.md  progress_state.md  providers.md  proxy.md  rich_display.md
docs/frameworks/: dspy.md  instructor.md  langchain.md  litellm.md  pydantic_ai.md  pydantic_evals.md
docs/overrides/: main.html
docs/providers/: anthropic.md  cerebras.md  doubleword.md  gemini.md  groq.md  mistral.md  openai.md  sference.md  together.md  vertex.md  xai.md
docs/use-cases/: streaming-batches.md
examples/: art_metadata.py  many.py  racing.py  streaming_batches.py
examples/frameworks/: dspy_example.py  instructor_example.py  langchain_example.py  litellm_example.py  pydantic_ai_example.py  pydantic_evals_example.py
examples/providers/: anthropic.py  anthropic_example.py  cerebras_example.py  doubleword_example.py  gemini.py  gemini_example.py  groq_example.py  mistral.py  mistral_example.py  openai.py  openai_example.py  provider_race.py  sference_example.py  together.py  together_example.py  vertex_example.py  xai_example.py
frameworks/: index.html
providers/anthropic/: index.html
providers/doubleword/: index.html
providers/mistral/: index.html
providers/together/: index.html
scripts/: generate_framework_docs.py  get_results.sh  reasoning.sh  run_all.sh  run_base.sh  run_multimodal.sh  run_so.sh
scripts/anthropic/: base.sh  multimodal.sh  reasoning.sh  so.sh
scripts/doubleword/: base.sh  multimodal.sh  so.sh
scripts/gemini/: base.sh  multimodal.sh  reasoning.sh  so.sh
scripts/groq/: base.sh  multimodal.sh  so.sh
scripts/mistral/: base.sh  multimodal.sh  so.sh
scripts/openai/: base.sh  multimodal.sh  reasoning.sh  so.sh
scripts/together/: base.sh  multimodal.sh  so.sh
search/: search_index.json
src/batchling/: __init__.py  __main__.py  api.py  api_utils.py  batch_utils.py  cache.py  cls_utils.py  context.py  context_display.py  core.py  exceptions.py  experiment.py  experiment_manager.py  file_utils.py  hooks.py  lifecycle_events.py  logging.py  models.py  progress_state.py  request.py  rich_display.py  status.py  test_engine.py  test_frameworks.py  user_input.py
tests/: __init__.py  conftest.py  pytest.ini  test_api.py  test_batch_utils.py  test_cache.py  test_cli.py  test_cli_script_runner.py  test_context.py  test_context_display.py  test_core.py  test_db.py  test_experiment.py  test_experiment_manager.py  test_file_utils.py  test_foo.py  test_generate_framework_docs.py  test_hooks.py  test_hooks_provider.py  test_provider_contracts.py  test_provider_registry.py  test_proxy.py  test_rich_display.py
tests/mocks/: README.md  __init__.py  batching.py  clients.py  (+1 more)
tutorials/: getting_started.md
use-cases/: index.html
(+100 files in other folders)
