[project]
name = "batchling"
version = "0.0.14"
description = "A python library to abstract GenAI Batch API usage"
authors = [{ name = "Raphael Vienne", email = "raphaelvienne.work@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "click>=8.3.0",
    "httpx>=0.28.1",
    "platformdirs>=4.5.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.44",
    "structlog>=25.5.0",
    "typer>=0.20.0",
]

[project.scripts]
batchling = "batchling.cli.main:app"

[project.urls]
source = "https://github.com/vienneraphael/batchling"

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "ipykernel>=7.0.1",
    "prek>=0.2.10",
    "pyinstrument>=5.1.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "respx>=0.22.0",
    "ruff>=0.14.2",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
packages = ["src/batchling"]
